# dist/swagger.json
@@ -7,7 +7,7 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"CategoryDto": {
+			"CreateCategoryDto": {
 				"properties": {
 					"name": {
 						"type": "string"
@@ -27,8 +27,7 @@
 					"data": {}
 				},
 				"required": [
-					"message",
-					"data"
+					"message"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -59,6 +58,16 @@
 					"204": {
 						"description": "No content"
 					},
+					"400": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ResponseDto"
+								}
+							}
+						}
+					},
 					"500": {
 						"description": "",
 						"content": {
@@ -80,11 +89,55 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/CategoryDto"
+								"$ref": "#/components/schemas/CreateCategoryDto"
 							}
 						}
 					}
 				}
+			}
+		},
+		"/category/{categoryID}": {
+			"get": {
+				"operationId": "GetCategoryByID",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ResponseDto"
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "No content"
+					},
+					"404": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Category"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "categoryID",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
