# src/controller/CategoryController.ts
@@ -1,30 +1,41 @@
-import { Body, Controller, Get, Post, Query, Res, Route, Tags, TsoaResponse } from "tsoa";
-import { CategoryDto } from "../model/dto/CategoryDto";
-import { ErrorDto } from "../model/dto/ErrorDto";
+import { Body, Controller, Get, Path, Post, Query, Res, Route, Tags, TsoaResponse } from "tsoa";
+import { ErrorCode } from "../model/ErrorCode";
 import { ResponseDto } from "../model/dto/ResponseDto";
 import { createCategory } from "../service/category/createCategory";
+import { CreateCategoryDto } from "../model/dto/category/CreateCategory";
+import { getCategoryByID } from "../service/category/getCategoryByID";
 
 @Route('category')
 @Tags('Category')
 export class CategoryController extends Controller {
+
     @Post()
     public async registerCategory(
-        @Body() dto: CategoryDto,
-        @Res() fail: TsoaResponse<500, ResponseDto>,
+        @Body() dto: CreateCategoryDto,
+        @Res() fail: TsoaResponse<400, ResponseDto>,
         @Res() success: TsoaResponse<201, ResponseDto>
     ): Promise<void> {
         const response = await createCategory(dto);
 
-        if (response instanceof ErrorDto) {
-            fail(500, response.message);
+        if (response instanceof ErrorCode) {
+            fail(400, new ResponseDto(response.message));
         }
 
         success(201, new ResponseDto('Categoria criada com sucesso!', response));
     }
 
-    // @Get()
-    // public async getCategoryByID(
-    //     @Query id: string,
-    //     @Res() notFound: TsoaResponse<404, any>,
-    // )
+    @Get('{categoryID}')
+    public async getCategoryByID(
+        @Path() categoryID: string,
+        @Res() notFound: TsoaResponse<404, ResponseDto>,
+        @Res() success: TsoaResponse<200, ResponseDto>
+    ): Promise<void> {
+        const response = await getCategoryByID(categoryID);
+
+        if (response instanceof ErrorCode) {
+            notFound(404, new ResponseDto(response.message));
+        }
+
+        success(200, new ResponseDto('Categoria encontrada com sucesso!', response));
+    }
 }
