# src/model/entity/BookEntity.ts
@@ -1,17 +1,17 @@
 export class BookEntity {
-    private id: number;
+    private id: string;
     public categoryID: number;
     public title: string;
     public author: string;
 
-    constructor(id: number, categoryID: number, title: string, author: string) {
+    constructor(id: string, categoryID: number, title: string, author: string) {
         this.id = id;
         this.categoryID = categoryID;
         this.title = title;
         this.author = author;
     }
 
-    public get getID(): number {
+    public get getID(): string {
         return this.id;
     }
 
